Cycles Viewport Denoising Appears Red #92526

Closed
opened 2021-10-27 10:44:03 +02:00 by Zijun Zhou · 13 comments
Contributor

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.96

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-26 23:24, hash: 8d8ce64435
Worked: 3.0.0 Alpha, branch: master, commit date: 2021-10-25 23:16, hash: 32cc9ff037

Short description of error
[Please fill out a short description of the error here]
Enabling viewport denoising during rendered shading mode would cause the view to turn red
image.png

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
Based on the default startup

  1. Switch render engine to Cycles
  2. Turn on Rendered shading mode
  3. Enable viewport denoising and see the default cube turn red
  4. Go back to solid mode and turn on rendered view again, issue gone
  5. Turn viewport denoising off and on, see the red comes back
**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.96 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-26 23:24, hash: `8d8ce64435` Worked: 3.0.0 Alpha, branch: master, commit date: 2021-10-25 23:16, hash: `32cc9ff037` **Short description of error** [Please fill out a short description of the error here] Enabling viewport denoising during rendered shading mode would cause the view to turn red ![image.png](https://archive.blender.org/developer/F11540066/image.png) **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] Based on the default startup 1. Switch render engine to Cycles 2. Turn on Rendered shading mode 3. Enable viewport denoising and see the default cube turn red 4. Go back to solid mode and turn on rendered view again, issue gone 5. Turn viewport denoising off and on, see the red comes back
Author
Contributor

Added subscriber: @Eary

Added subscriber: @Eary

#92594 was marked as duplicate of this issue

#92594 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58

Added subscriber: @blenderrocket

Added subscriber: @blenderrocket

I can also confirm this.
Operating system: macOS-12.0.1-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.7.29
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-26 23:24, hash: 8d8ce64435

I can also confirm this. Operating system: macOS-12.0.1-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.7.29 Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-26 23:24, hash: `8d8ce64435`
Author
Contributor

I thought this should be higher priority? It's very easy to run into this

I thought this should be higher priority? It's very easy to run into this
Contributor

The object also turns white if you zoom out.
2021-10-28 09_50_17-Window.png

Another thing I noted, Blender forgets that I saved in Viewport Shading Mode: RENDERED. Instead I am back to SOLID

The object also turns white if you zoom out. ![2021-10-28 09_50_17-Window.png](https://archive.blender.org/developer/F11565354/2021-10-28_09_50_17-Window.png) Another thing I noted, Blender forgets that I saved in Viewport Shading Mode: RENDERED. Instead I am back to SOLID
Brecht Van Lommel self-assigned this 2021-10-28 15:43:57 +02:00

This issue was referenced by blender/cycles@1b286d95cc

This issue was referenced by blender/cycles@1b286d95ccf9365f7eaaec470d637c0164d0135d

This issue was referenced by cefb0122b4

This issue was referenced by cefb0122b4973d8311955a163de4cf16b475edc1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscribers: @viadvena, @deadpin

Added subscribers: @viadvena, @deadpin
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92526
No description provided.