Fix T92526: Cycles viewport denoiser red tint after recent changes